--- a/package.json
+++ b/package.json
@@ -17,21 +17,17 @@
   },
   "homepage": "https://github.com/goonwzz/iboom#readme",
   "devDependencies": {
-    "babel-eslint": "^7.2.3",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "eslint": "^4.0.0",
-    "antd": "^2.7.1",
-    "babel-core": "^6.17.0",
     "babel-eslint": "^7.0.0",
-    "babel-loader": "^6.2.5",
-    "babel-plugin-antd": "^0.4.0",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.0.15",
+    "eslint": "^1.2.1",
+    "antd": "^2.7.1",
+    "babel-core": "^6.17.0",
+    "babel-loader": "^6.2.5",
+    "babel-plugin-antd": "^0.4.0",
     "babel-preset-stage-0": "^6.5.0",
     "css-loader": "^0.23.0",
     "es6-promise": "^3.1.2",
-    "eslint": "^1.2.1",
     "eslint-loader": "^1.0.0",
     "eslint-plugin-react": "^3.3.0",
     "event-stream": "^3.3.2",
@@ -61,5 +57,10 @@
     "webpack": "^1.13.3",
     "webpack-dev-server": "^1.16.2",
     "whatwg-fetch": "^1.1.1"
+  },
+  "dependencies": {
+    "gulp": "^3.9.1",
+    "history": "^4.6.1",
+    "react": "^15.5.4"
   }
 }
