--- a/package.json
+++ b/package.json
@@ -17,23 +17,25 @@
   },
   "homepage": "https://github.com/goonwzz/iboom#readme",
   "devDependencies": {
-    "babel-eslint": "^7.0.0",
-    "babel-preset-es2015": "^6.14.0",
-    "babel-preset-react": "^6.0.15",
-    "eslint": "^1.2.1",
     "antd": "^2.7.1",
     "babel-core": "^6.17.0",
+    "babel-eslint": "^7.0.0",
     "babel-loader": "^6.2.5",
     "babel-plugin-antd": "^0.4.0",
+    "babel-preset-es2015": "^6.14.0",
+    "babel-preset-react": "^6.0.15",
     "babel-preset-stage-0": "^6.5.0",
     "css-loader": "^0.23.0",
     "es6-promise": "^3.1.2",
+    "eslint": "^1.2.1",
     "eslint-loader": "^1.0.0",
     "eslint-plugin-react": "^3.3.0",
     "event-stream": "^3.3.2",
     "exports-loader": "^0.6.3",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.4",
+    "less": "^2.7.2",
+    "less-loader": "^4.0.4",
     "react": "^15.4.1",
     "react-avatar-editor": "^4.1.3",
     "react-cookie": "^0.4.7",
