--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-eslint": "^7.0.0",
     "babel-loader": "^6.2.5",
     "babel-plugin-antd": "^0.4.0",
+    "babel-plugin-import": "^1.2.1",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.0.15",
     "babel-preset-stage-0": "^6.5.0",
